--- a/revers_proxy/Dockerfile
+++ b/revers_proxy/Dockerfile
@@ -1,5 +1,9 @@
 FROM nginx:1.13
 
-COPY ./default.conf /etc/nginx/conf.d/default.conf
+COPY ./revers_proxy/default.conf /etc/nginx/conf.d/default.conf
+COPY ./url_reducer/domains /etc/nginx/conf.d/domains
 
-CMD ["nginx", "-g", "daemon off;"]
+COPY ./revers_proxy/entrypoint.sh /entrypoint.sh
+RUN chmod -R 755 /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
