--- a/revers_proxy/_default.conf
+++ b/revers_proxy/_default.conf
@@ -19,7 +19,35 @@ proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
 gzip on;
 gzip_comp_level 4;
 
+server {
+  listen 80;
+  server_name domain1.link;
+  return 301 $scheme://api.redirect.link/url_reducer/redirect/$server_name$uri;
+}
 
+server {
+  listen 80;
+  server_name dom123.com;
+  return 301 $scheme://api.redirect.link/url_reducer/redirect/$server_name$uri;
+}
+
+server {
+  listen 80;
+  server_name test123.ru;
+  return 301 $scheme://api.redirect.link/url_reducer/redirect/$server_name$uri;
+}
+
+server {
+  listen 80;
+  server_name lalala.we;
+  return 301 $scheme://api.redirect.link/url_reducer/redirect/$server_name$uri;
+}
+
+server {
+  listen 80;
+  server_name blablabla.com;
+  return 301 $scheme://api.redirect.link/url_reducer/redirect/$server_name$uri;
+}
 
 server {
     listen 80;
